kubernetes/MiniProjt_DeploiementWORDPRESS/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-wp
  labels:
    app: wordpress
  namespace: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-data
      volumes:
      - name: mysql-data
        hostPath:
          path: /data/mysql
          type: Directory
