kubernetes/MiniProjt_DeploiementWORDPRESS/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
  namespace: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wordpress
      tier: front
  template:
    metadata:
      labels:
        app: wordpress
        tier: front
    spec:
      containers:
      - name: front
        image: wordpress
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/html
            name: wordpress-data
      volumes:
      - name: wordpress-data
        hostPath:
          path: /data/wordpress
          type: Directory
