kubernetes/MiniProjt_DeploiementWORDPRESS/service-wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: service-wordpress
  labels:
    name: wordpress
  namespace: wordpress  
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30010
