kubernetes/MiniProjt_DeploiementWORDPRESS/wordpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: wordpress  
spec:
  rules:
    - host: wordpress.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-wordpress
                port:
                  number: 80
